# veip-verifier-core

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: fixture_pack.json  test_cli.py  test_tamper.py
veip_verifier_core/: cli.py  replay.py  schema.py
veip_verifier_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
veip_verifier_core/schemas/: veip-evidence-pack.schema.json
