[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veip-verifier-core"
version = "0.1.0"
description = "Canonical schema validation and deterministic replay verification for VEIP Evidence Packs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
  { name = "Veraxis Execution Integrity Protocol Authors" }
]

dependencies = [
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
veip-verify = "veip_verifier_core.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["veip_verifier_core*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
